src/ui/components/snapshots/lazarobox_shell__ui__components__menu__tests__snapshot_error_replaces_the_hint_and_is_clipped.snap
---
source: src/ui/components/menu.rs
expression: text(&buf)
---
┌ Menu ───────────────────────────────────────────┐
│ Settings                                        │
│ Statusline position                      bottom │
│ Tab bar position                            top │
│ Mouse: off (coming soon)                        │
│                                                 │
│ config.toml: statusline is not a table; fix it …│
└─────────────────────────────────────────────────┘
