src/ui/components/snapshots/lazarobox_shell__ui__components__menu__tests__snapshot_popup_is_centred_in_a_larger_area.snap
---
source: src/ui/components/menu.rs
expression: "text(&draw(60, 11, &fresh()))"
---
                                                            
    ┌ Menu ───────────────────────────────────────────┐     
    │ Settings                                        │     
    │ Statusline position                      bottom │     
    │ Tab bar position                            top │     
    │ Mouse: off (coming soon)                        │     
    │                                                 │     
    │ j/k move · h/l change · Enter save · Esc cancel │     
    └─────────────────────────────────────────────────┘
