src/ui/components/snapshots/lazarobox_shell__ui__components__menu__tests__snapshot_settings_popup_at_the_wanted_size.snap
---
source: src/ui/components/menu.rs
expression: "text(&draw(51, 8, &fresh()))"
---
┌ Menu ───────────────────────────────────────────┐
│ Settings                                        │
│ Statusline position                      bottom │
│ Tab bar position                            top │
│ Mouse: off (coming soon)                        │
│                                                 │
│ j/k move · h/l change · Enter save · Esc cancel │
└─────────────────────────────────────────────────┘
